--- a/css/style.css
+++ b/css/style.css
@@ -15,6 +15,17 @@
     padding: 1.5rem 1rem !important;
 }
 
+.horariofunc {
+    height: auto;
+    background-image: url(https://willfisio.weebly.com/uploads/1/4/6/3/146330638/background-images/338236349.png);
+    background-repeat: no-repeat;
+    background-position: left;
+    background-color: transparent;
+    background-size: contain;
+    width: 100%;
+    vertical-align: middle;
+}
+
 /******* Bootstrap Theming ********/
 /*!
  * Bootstrap v4.5.3 (https://getbootstrap.com/)
