--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,9 @@
         background-size: initial;
         background-position: center left;
     }
+    .display-3 span{
+        font-size: 2.5rem;
+    }
 }
 
 
