--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@
         background-position: center left;
     }
     .display-3 span{
-        font-size: 2.5rem;
+        font-size: 2.5rem !important;
     }
 }
 
