--- a/css/style.css
+++ b/css/style.css
@@ -40,7 +40,7 @@
 
 .horariofunc {
     height: auto;
-    background-image: url(https://willfisio.weebly.com/uploads/1/4/6/3/146330638/background-images/338236349.png);
+    background-image: url(../img/stone.png);
     background-repeat: no-repeat;
     background-position: top left;
     background-color: transparent;
