--- a/css/linktreestyle.css
+++ b/css/linktreestyle.css
@@ -53,7 +53,7 @@ body {
   font: var(--font_size) var(--font_family);
   font-weight: 400;
   line-height: 1.5;
-  background: var(--background_color) var(--background_image) no-repeat center;
+  background: var(--background_color) var(../img/stone.png) no-repeat center;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
