--- a/css/linktreestyle.css
+++ b/css/linktreestyle.css
@@ -122,6 +122,7 @@ body {
   cursor: pointer;
     margin: 0 2em;
     text-align: right;
+    border-radius: 6px;
 }
 
 .header_svg_item + .header_svg_item {
