--- a/css/linktreestyle.css
+++ b/css/linktreestyle.css
@@ -49,7 +49,16 @@
 }
 
 /* Basic Codes */
-
+.qrcodes .header_svg_item {
+    width: 11.1em;
+    height: 14.1em;
+    border: 2px solid #505050;
+}
+.qrcodes p {
+    text-align: center;
+    color: var(--button_text_color);
+    text-decoration: none;
+}
 body {
   font: var(--font_size) var(--font_family);
   font-weight: 400;
