--- a/css/linktreestyle.css
+++ b/css/linktreestyle.css
@@ -144,16 +144,11 @@ body {
   width: 3.1em;
   height: 3.1em;
   cursor: pointer;
-    margin: 0 2em;
+    margin: 1.5em 2em;
     text-align: right;
     border-radius: 6px;
 }
 
-.header_svg_item + .header_svg_item {
-  margin: 0 2em;
-    text-align: right;
-        border-radius: 6px;
-}
 
 .header_svg_item svg, path {
   fill: var(--svg_color);
