--- a/css/style.css
+++ b/css/style.css
@@ -53,7 +53,7 @@
     vertical-align: middle;
 }
 
-.hours-text.bg-light.p-4.p-lg-5.my-lg-5 {
+.hours-text.bg-light.p-4.p-lg-5 {
     background-color: transparent !important;
 }
 
