--- a/css/style.css
+++ b/css/style.css
@@ -9,8 +9,20 @@
     }
 }
 
+.contatocont {
+    text-align: center;
+}
+
+.contatocont a {
+    max-width: 200px;
+    margin: auto;
+}
+.navbarcontainer {
+    border-bottom: 2px solid #e7e7e7;
+}
 .contatocont iframe {
     max-width: 100%;
+    border-radius: 20px;
 }
 
 .contatocont a:hover img {
