--- a/css/style.css
+++ b/css/style.css
@@ -41,6 +41,14 @@
     vertical-align: middle;
 
 }
+.contatolist a:hover svg{
+    background: #3c3c3c;
+    border: 2px solid #3c3c3c;
+    border-radius: 100%;  
+}
+.contatolist a:hover svg path{
+fill: #bdf3e3;
+}
 .main_text_item.contatolist p {
    display: block;
     width: 100%;
