--- a/css/style.css
+++ b/css/style.css
@@ -44,10 +44,10 @@
 .contatolist a:hover svg{
     background: #3c3c3c;
     border: 2px solid #3c3c3c;
-    border-radius: 100%;  
+    border-radius: 6px;  
 }
 .contatolist a:hover svg path{
-fill: #bdf3e3;
+fill: #bdf3e3 !important;
 }
 .main_text_item.contatolist p {
    display: block;
