--- a/css/linktreestyle.css
+++ b/css/linktreestyle.css
@@ -86,6 +86,7 @@ body {
   flex-direction: column;
   flex-wrap: wrap;
     background-color: #fff;
+    background-size: 40%;
 }
 
 .flex_column_center {
