--- a/css/style.css
+++ b/css/style.css
@@ -2010,6 +2010,10 @@ pre code {
 }
 
 @media (max-width: 991.98px) {
+    .navbar-light .navbar-brand {
+    margin: auto;
+    padding-left: 12px;
+}
     .navbarcontact{
         display: flex !important;
     }
