--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,19 @@
         font-size: 2.5rem !important;
     }
 }
+.dropdown span.nav-link {
+    cursor: context-menu;
+}
+.nav-item dropdown span::after {
+    display: inline-block;
+    margin-left: 0.255em;
+    vertical-align: 0.255em;
+    content: "";
+    border-top: 0.3em solid;
+    border-right: 0.3em solid transparent;
+    border-bottom: 0;
+    border-left: 0.3em solid transparent;
+}
 .navbar-brand .img-fluid {
     transition: background 2s;
 }
