--- a/css/style.css
+++ b/css/style.css
@@ -8,10 +8,10 @@
         font-size: 2.5rem !important;
     }
 }
-.dropdown span.nav-link {
+.hoverdrop {
     cursor: context-menu;
 }
-.nav-item dropdown span::after {
+.nav-item.dropdown span::after {
     display: inline-block;
     margin-left: 0.255em;
     vertical-align: 0.255em;
