--- a/css/style.css
+++ b/css/style.css
@@ -14,8 +14,19 @@
 .precos img {
     max-width: 200px;
 }
+.precoscont > div {
+    padding: 12px 0 !important;
+}
 .precoscont > div > div {
     justify-content: center;
+    background: #e7e7e7;
+    border-radius: 24px;
+    padding: 26px 0px;
+    margin: 12px auto;
+}
+.precoscont img {
+    max-width: 210px;
+    border-radius: 12px;
 }
 .nav-item.dropdown span::after {
     display: inline-block;
