--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,16 @@
     .display-3 span{
         font-size: 2.5rem !important;
     }
+    .carqm{
+        height: 179% !important;
+        object-position: 75% -18em !important;
+    }
 }
+.carqm{
+         height: 160%;
+    object-position: 75% -13em;
+    }
+   
 .team.position-relative.overflow-hidden.mb-5 {
     padding: 6px;
     background: #a9a9a9;
