--- a/css/style.css
+++ b/css/style.css
@@ -12,6 +12,10 @@
         object-position: 75% -18em !important;
     }
 }
+.serviced-carousel .owl-stage {
+    transform: none !important;
+    margin: auto;
+}
 .carqm{
          height: 160% !important;
     object-position: 75% -13em !important;
