--- a/css/style.css
+++ b/css/style.css
@@ -14,7 +14,8 @@
 }
 .mainvideo{
         width: 100%;
-    max-width: 281px;
+    max-width: 300px;
+    height: 533px;
 }
 .goldstar path {
     fill: #f2d600;
