--- a/css/style.css
+++ b/css/style.css
@@ -12,6 +12,14 @@
         object-position: 75% -18em !important;
     }
 }
+.contatocont p {
+    border-top: 1px solid #e7e7e7;
+    padding-top: 16px;
+}
+.contatocont li {
+    color: #757575;
+    font-size: 0.9em;
+}
 .mainvideo{
         width: 100%;
     max-width: 300px;
