--- a/css/linktreestyle.css
+++ b/css/linktreestyle.css
@@ -12,7 +12,7 @@
   --background_image: url("../img/wallpaper.png");
 
   /* You can change the frame thickness and color of the picture by typing the number of pixels and the color code. */
-  --image_border_color: #e7e7e7;
+  --image_border_color: #d9fff4;
   --image_border_px: 3px;
 
   /* You can change the width and size of the picture by typing the number of pixels. */
